OldePrep/OUTPUT/LOGS/2024_07_10__00_15_05.log
Created At "2024_07_10__00_15_05"





----------------------------------[ Listing all Files ]-----------------------------------
total 388K
drwxr-xr-x  5 yarne yarne 4.0K Jul  9 23:35 ./
drwxr-x--- 21 yarne yarne 320K Jul  9 22:07 ../
drwxr-xr-x  2 yarne yarne 4.0K Jul  9 23:35 C/
drwxr-xr-x  3 yarne yarne 4.0K Jul  9 19:32 LATEX/
-rw-r--r--  1 yarne yarne 1.3K Jul 10 00:15 Meeting1.cpp
drwxr-xr-x  5 yarne yarne 4.0K Jul 10 00:15 OUTPUT/
-rwxr-xr-x  1 yarne yarne 6.0K Jul  9 23:35 run1.sh*
-rw-r--r--  1 yarne yarne 5.4K Jul  9 19:02 test.cpp
-rw-r--r--  1 yarne yarne  633 Jun 27 23:21 test.f90
-rw-r--r--  1 yarne yarne 1.4K Jul  9 18:54 test.log
-rw-r--r--  1 yarne yarne 2.4K Jun 20 00:02 test.py
-rw-r--r--  1 yarne yarne 6.9K Jul  9 18:02 test.sty
-rw-r--r--  1 yarne yarne  417 Jul  9 18:30 test.tex
-rw-r--r--  1 yarne yarne  651 Jan 30  2023 vb_21.tex





----------------------------------[ C part right here ]-----------------------------------
Meeting1.cpp                                                                       Compile
Meeting1.cpp: In member function ‘std::vector<int> LWE::encrypt(int)’:
Meeting1.cpp:53:22: error: use of ‘this’ in a constant expression
   53 |         vector<int,n+1> c;
      |                      ^
Meeting1.cpp:53:23: error: type/value mismatch at argument 2 in template parameter list for ‘template<class _Tp, class _Alloc> class std::vector’
   53 |         vector<int,n+1> c;
      |                       ^
Meeting1.cpp:53:23: note:   expected a type, got ‘(((LWE*)this)->LWE::n + 1)’
Meeting1.cpp:57:14: error: invalid types ‘int[int]’ for array subscript
   57 |             c[i] = a[i];
      |              ^
Meeting1.cpp:58:22: error: invalid types ‘int[int]’ for array subscript
   58 |             cout << c[i] << ", ";
      |                      ^
Meeting1.cpp:61:16: error: could not convert ‘c’ from ‘int’ to ‘std::vector<int>’
   61 |         return c;
      |                ^
      |                |
      |                int
Meeting1.cpp: In function ‘int main()’:
Meeting1.cpp:72:26: error: cannot convert ‘std::vector<int>’ to ‘int*’ in initialization
   72 |     int* c = lwe1.encrypt(0);
      |              ~~~~~~~~~~~~^~~
      |                          |
      |                          std::vector<int>





------------------------------------[ Simulatie-tijd ]------------------------------------
2024_07_10__00_15_05 -\> 2024_07_10__00_15_05:                                 00h 00m 00s
